--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,15 @@
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
+    background-color: moccasin;
+    width: 100%;
 }
 
 .logo {
+    display: flex;
+    border-radius: 50%;
     width: 150px;
+    border: 10px;
 }
 
 .nav-items > ul {
@@ -18,12 +23,12 @@
     font-size: 20px;
 }
 
-.nav-items > ul > li {
+.nav-items > ul > button {
     padding: 10px;
     margin: 10px;
 }
 
-.nav-items > ul > li:hover {
+.nav-items > ul > button:hover {
     cursor: pointer;
     color: #186F65;
 }
