--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,10 @@
     color: #186F65;
 }
 
+.input-button {
+    margin: 10px;
+}
+
 .res-card {
     padding: 5px;
     width: 200px;
@@ -59,7 +63,27 @@
     height: 200px;
 }
 
+.filter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .filter-btn{
+    font-style: italic;
+    font-weight: bold;
     margin: 10px;
     cursor: pointer;
+}
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap-reverse;
+}
+
+.shimmer-card {
+    margin: 20px;
+    width: 200px;
+    height: 400px;
+    background-color: #f0f0f0;
 }
