--- a/styles.css
+++ b/styles.css
@@ -1,98 +1,3 @@
-#heading{
-    color: green;
-}
-
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-    background-color: moccasin;
-    width: 100%;
-}
-
-.logo {
-    display: flex;
-    border-radius: 50%;
-    width: 150px;
-    border: 10px;
-}
-
-.nav-items > ul {
-    display: flex;
-    list-style-type: none;
-    font-size: 20px;
-}
-
-.nav-items > ul > li > button {
-    padding: 10px;
-    margin: 10px;
-}
-
-.nav-items > ul > li > button:hover {
-    cursor: pointer;
-    color: #186F65;
-}
-
-.input-button {
-    margin: 10px;
-}
-
-.res-card {
-    padding: 5px;
-    width: 200px;
-    /* height: 500px; */
-    margin: 5px;
-}
-
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.res-card:hover {
-    cursor: pointer;
-    border: 2px solid orangered;
-}
-
-.search{
-    padding: 10px;
-}
-
-.res-logo {
-    width: 200px;
-    height: 200px;
-}
-
-.filter {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.filter-btn{
-    font-style: italic;
-    font-weight: bold;
-    margin: 10px;
-    cursor: pointer;
-}
-
-.shimmer-container {
-    display: flex;
-    flex-wrap: wrap-reverse;
-}
-
-.shimmer-card {
-    margin: 20px;
-    width: 200px;
-    height: 400px;
-    background-color: darkgray;
-}
-
-.menu {
-    color: black;
-}
-
-.user-card {
-    padding: 10px;
-    border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
